# paper_research_claude

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  _ul  analyze_results.py  pyproject.toml  requirements.txt  search_eeg_eyetracking.py
.claude/: settings.local.json
.claude/agents/: gap-detective.md  hypothesis-architect.md  literature-search-specialist.md  methodology-expert.md  research-critic.md  sota-synthesizer.md
.claude/plans/: plan-research-agent.md
.claude/skills/: build-sota.md  deep-search.md  export-references.md  find-gaps.md  handoff-gemini.md  research-init.md  screen-papers.md  session-status.md
data/interactive/: 31812731-73d9-4e57-8015-b892ec7cd9a3_compact.md  31812731-73d9-4e57-8015-b892ec7cd9a3_papers.json  31812731-73d9-4e57-8015-b892ec7cd9a3_papers.md  be8350db-b685-40de-8490-563d4a00771c_compact.md  be8350db-b685-40de-8490-563d4a00771c_papers.json  be8350db-b685-40de-8490-563d4a00771c_papers.md  research.db
interactive mode/: citation_keys.md  deeper_thematic_analysis.md  gap_analysis.md  gemini_prompt.md  handoff_payload.json  hypothesis_specification.md  journal_recommendations.md  knowledge_graph.json  references_apa.md  screening_results.md  shortlist.json  sota_review.md
interactive mode/previous/: gemini_prompt.md  handoff_payload_readable.md  hypothesis_specification.md  sota_review.md
src/: __init__.py  config.py  interactive.py  main.py
src/agents/: __init__.py  critic.py  orchestrator.py  searcher.py  synthesizer.py
src/schemas/: __init__.py  handoff_payload.py  paper.py
src/storage/: __init__.py  database.py
(+46 files in other folders)
